--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: task-management
-    databaseName: task-management
+    databaseName: task_management
     user: mysite
     plan: free
 
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: task-management
+          name: task_management
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
